[package]
name = "typst-lua"
version = "0.1.0"
authors = ["geraldoluiz@puc-rio.br"]
edition = "2021"

# Add this line
[lib]
name = "typst"
crate-type = ["cdylib"]

[dependencies]
typst-compiler = { path = "typst-compiler" }
typst = { git = "https://github.com/typst/typst", package = "typst"}
libc = "0.2"

rlua_lua54 = { git = "https://github.com/amethyst/rlua", package = "rlua-lua54-sys", optional = true }
rlua_lua53 = { git = "https://github.com/amethyst/rlua", package = "rlua-lua53-sys", optional = true }

[features]
lua54 = ["rlua_lua54"]
lua53 = ["rlua_lua53"]

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1
strip = true
#panic = 'abort'

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
build-std = []

