[package]
name = "typst-lua"
version = "0.1.0"
authors = ["geraldoluiz@puc-rio.br"]
edition = "2021"

# Add this line
[lib]
name = "typst_lua"
crate-type = ["cdylib"]

[dependencies]
typst_compiler = { path = "typst-compiler" }
typst = { git = "https://github.com/typst/typst", package = "typst"}
libc = "0.2"
bstr = { version = "1.7.0", features = ["alloc"] }

mlua51_lua51 = { git = "https://github.com/mlua-rs/mlua", package= "mlua", features = ["lua51", "module"], optional = true }
mlua52_lua52 = { git = "https://github.com/mlua-rs/mlua", package= "mlua", features = ["lua52", "module"], optional = true }
mlua53_lua53 = { git = "https://github.com/mlua-rs/mlua", package= "mlua", features = ["lua53", "module"], optional = true }
mlua54_lua54 = { git = "https://github.com/mlua-rs/mlua", package = "mlua", features = ["lua54", "module"], optional = true }


[features]
lua51 = ["mlua51_lua51"]
lua52 = ["mlua52_lua52"]
lua53 = ["mlua53_lua53"]
lua54 = ["mlua54_lua54"]

[profile.release]
opt-level = 3
incremental = true
lto = true
# strip = true
#panic = 'abort'

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
build-std = []

