[package]
name = "typst-lua"
version = "0.1.0"
authors = ["git@geraldo.rio.br"]
edition = "2021"

# Add this line
[lib]
name = "typst"
crate-type = ["cdylib"]

[dependencies]
typst-as-library = { path = "typst-as-library" }
typst = "0.14"
mlua = { version = "*", features = ["module"] }



[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]


