[package]
name = "typst-compiler"
version = "0.1.0"
description = "Library interface for typst."
categories = ["compilers", "command-line-utilities"]
keywords = ["typst", "cli"]
edition = "2018"  # or "2018" for Rust 2018

[lib]
name = "typst_compiler"
path = "src/lib.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]
typst = { git = "https://github.com/typst/typst", package = "typst" }
typst-library = { git = "https://github.com/typst/typst", package = "typst-library" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
codespan-reporting = "0.11"
serde_json = { version = "1.0.96" }
#comemo = { git = "https://github.com/typst/comemo" }
comemo = "0.3"
dirs = "5"
elsa = "1.8"
inferno = "0.11.15"
memmap2 = "0.5"
notify = "5"
once_cell = "1"
open = "4.0.2"
same-file = "1"
siphasher = "0.3"
tempfile = "3.5.0"
tracing = "0.1.37"
tracing-error = "0.2"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.17"
walkdir = "2"

[build-dependencies]
#comemo = { git = "https://github.com/typst/comemo" }
comemo = "0.3"

[features]
default = ["embed-fonts"]

# Embeds some fonts into the binary:
# - For text: Linux Libertine, New Computer Modern
# - For math: New Computer Modern Math
# - For code: Deja Vu Sans Mono
embed-fonts = []
